[package]
name = "aliyun-log-sdk"
version = "0.1.0"
authors = ["lightsing <light.tsing@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
log = "0.4"
thiserror = "1.0"
bytes = "1.0"
prost = "0.7"

[dependencies.reqwest]
git = "https://github.com/seanmonstar/reqwest.git"
default-features = false

[dependencies.tokio]
version = "1.0"
default-features = false