[package]
name = "aliyun-log-sdk"
description = "A aliyun log API implementation"
repository = "https://github.com/Project5E/aliyun-log-sdk"
version = "0.0.1"
authors = ["lightsing <light.tsing@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["aliyun", "aliyuncs", "log"]
categories = ["api-bindings"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
log = "0.4"
thiserror = "1.0"
itertools = "0.9"
bytes = "1.0"
flate2 = "1.0"
quick-protobuf = "0.8"
url = "2.2"
hmac = "0.10"
digest = "0.9"
md-5 = "0.9"
sha-1 = "0.9"
hex = "0.4"
base64 = "0.13"
chrono = "0.4"

[dependencies.reqwest]
version = "0.11"

[dependencies.tokio]
version = "1.0"
default-features = false

[dev-dependencies]
env_logger = "0.8.2"

[dev-dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread"]